Fix Height for Legends

--- a/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/legend/legend.component.scss
@@ -21,8 +21,9 @@
 
   .horizontal-legend {
     overflow-x: auto;
-    overflow-y: hidden;
+    overflow-y: auto;
     margin-left: 10px;
+    max-height: 80px;
 
     &.legend-labels {
       width: calc(100% - 10px);
